refactor: 리스트 초기화 변경